--- a/README
+++ b/README
@@ -1,42 +1,13 @@
-DAIA Perl package
-=================
 
-This module provides classes and functions for the Document Availability
-Information API (DAIA) as specified at L<http://purl.org/NET/DAIA>.
 
-INSTALLATION
+This archive contains the distribution DAIA,
+version 0.35:
 
-To install this module type the following:
+  Document Availability Information API
 
-   perl Makefile.PL
-   make
-   make test
-   make install
+This software is copyright (c) 2011 by Jakob Voss.
 
-This will also install the converter/validator script found in clients/daia.pl
-The script can be used as command line client (just invoke 'daia') and as web
-application and web service. 
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
-To install it the script on you webserver copy the file htaccess.example to
-.htaccess in the same directory and adopt it to the settings of your webserver.
-You may also need to install a perl module for example mod_perl for apache2.
 
-EXAMPLES
-
-To run the CGI-Examples in the directory examples you also may need to create
-a .htaccess. ust copy and adopt htaccess.example from the directory clients to
-allow execution of perl scripts as CGI.
-
-The example gvk.pl additionaly requires the Perl library PICA::Record.
-
-DEPENDENCIES
-
-See Makefile.PL for a list of dependencies.
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2009 Verbundzentrale des GBV (VZG) and by Jakob
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself, either Perl version 5.10.0 or,
-at your option, any later version of Perl 5 you may have available.
