--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution DAIA,
-version 0.421:
+version 0.43:
 
   Document Availability Information API
 
-This software is copyright (c) 2012 by Jakob Voss.
+This software is copyright (c) 2013 by Jakob Voß.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
